rust/macros/tests/invalid/target/debug/deps/only_comma-808803feafa9f444.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma-808803feafa9f444.d: only_comma.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libonly_comma-808803feafa9f444.rmeta: only_comma.rs Cargo.toml

only_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
